# serialsim

./: Makefile  README  README.rst  openssl.conf.example  serialsim.c
include/linux/: serialsim.h
swig/: AUTHORS  Makefile.am  README  configure.ac  serialsim.c  serialsim.i  serialsim.py
